# Proyecto_2_MLOps

./: README.md  pyproject.toml
.github/workflows/: git_ci_cd.yml
calculator/: string.py
docs/source/: conf.py  index.rst  install.rst  requirements.txt
mipaquete/: __init__.py  __main__.py  data.py  export.py  fit.py  math.py  model.py  string.py
tests/: test_math.py  test_string.py
