[tool.poetry]
name = "mipaquete"
version = "0.1.0"
description = "Proyecto de empaquetamiento MLOps"
authors = ["Spydneo <jairoecalderon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
