[tool.poetry]
name = "mipaquete"
version = "0.2.4"
description = "Proyecto de empaquetamiento MLOps"
authors = ["Spydneo <jairoecalderon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
