[tool.poetry]
name = "mipaquete"
version = "0.3.1"
description = "Proyecto de empaquetamiento MLOps"
authors = ["Spydneo <jairoecalderon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
Sphinx = "^5.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"